# Vault-0

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCOPE.md  SECURITY.md  index.html  package-lock.json  package.json  tweets-thread.md  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: launch-assets.md  quickstart.md  security-model.md
examples/: demo-curl.sh  policy-openclaw-safe.yaml
public/: skill.md
skills/vault0/: SKILL.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: detect.rs  evidence.rs  gateway_ws.rs  launcher.rs  lib.rs  main.rs  mcp_guard.rs  openclaw_health.rs  policy.rs  proxy.rs  vault_store.rs  wallet.rs  x402.rs
src/components/: GatewayTrace.svelte  SecureKeyOverlay.svelte  SessionTrace.svelte  ShareProof.svelte  Terminal.svelte
src/pages/: Dashboard.svelte  Evidence.svelte  GuidedSetup.svelte  Monitor.svelte  Onboarding.svelte  Payments.svelte  Policies.svelte  Secrets.svelte  TerminalPage.svelte
src/stores/: app.ts  events.ts
