[package]
name = "vault0-desktop"
version = "1.0.1"
description = "Secure desktop dashboard for autonomous AI agents"
authors = ["HorizonFlowLive"]
edition = "2021"

[lib]
name = "vault0_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net"] }
sha2 = "0.10"
base64 = "0.21"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
once_cell = "1"
dirs = "5"
keyring = "3"
alloy-signer-local = { version = "1", features = ["mnemonic"] }
alloy-signer = "1"
alloy-primitives = "1"
alloy-sol-types = "1"
getrandom = "0.2"
hex = "0.4"
rand = "0.8"
argon2 = "0.5"
aes-gcm = "0.10"

